--- a/biome.json
+++ b/biome.json
@@ -19,6 +19,7 @@
     "rules": {
       "recommended": true,
       "suspicious": {
+        "noArrayIndexKey":"off",
         "noUnknownAtRules": "off"
       }
     },
@@ -30,7 +31,7 @@
   "assist": {
     "actions": {
       "source": {
-        "organizeImports": "on"
+        "organizeImports": "off"
       }
     }
   }
