--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "primereact": "^10.9.7",
     "quill": "^2.0.3",
-    "react": "19.1.0",
+    "react": "^19.2.1",
     "react-circle-flags": "^0.0.23",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.64.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.4",
