--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "country-data-list": "^1.5.5",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.544.0",
     "next": "^16.0.7",
     "next-themes": "^0.4.6",
