--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "country-data-list": "^1.6.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lodash.debounce": "^4.0.8",
@@ -48,6 +49,7 @@
     "react": "^19.2.1",
     "react-circle-flags": "^0.0.27",
     "react-cookie": "^8.0.1",
+    "react-day-picker": "^9.14.0",
     "react-dom": "^19.2.1",
     "react-dropzone": "^15.0.0",
     "react-hook-form": "^7.64.0",
